--- a/index.html
+++ b/index.html
@@ -2,14 +2,43 @@
 <html>
 	<head>
 		<title>Yogularm 3D</title>
+		<meta charset="utf-8" />
 		
 		<link rel="stylesheet" type="text/css" href="stylesheets/style.css" />
+		
+		<script type="text/javascript" src="scripts/tools.js"></script>
+		<script type="text/javascript" src="scripts/base.js"></script>
+		<script type="text/javascript" src="scripts/main.js"></script>
+		
+		<script id="3d-vertex-shader" type="x-shader/x-vertex">
+			attribute vec4 a_position;
+			attribute vec4 a_color;
+
+			uniform mat4 u_matrix;
+
+			varying vec4 v_color;
+
+			void main() {
+				// Multiply the position by the matrix.
+				gl_Position = u_matrix * a_position;
+				// Pass the color to the fragment shader.
+				v_color = a_color;
+			}
+		</script>
+		<script id="3d-fragment-shader" type="x-shader/x-fragment">
+			precision mediump float;
+
+			// Passed in from the vertex shader.
+			varying vec4 v_color;
+
+			void main() {
+				gl_FragColor = v_color;
+			}
+		</script>
 	</head>
 	<body>
 		<div id="canvas-wrap">
 			<canvas id ="canvas"></canvas>
 		</div>
-		
-		<script type="text/javascript" src="scripts/main.js"></script>
 	</body>
 </html>
