--- a/index.html
+++ b/index.html
@@ -6,21 +6,26 @@
 		
 		<link rel="stylesheet" type="text/css" href="stylesheets/style.css" />
 		
-		<script type="text/javascript" src="scripts/tools.js"></script>
+		<script type="text/javascript" src="scripts/libs/gl-matrix/gl-matrix.js"></script>
+		<script type="text/javascript" src="scripts/webgl.js"></script>
 		<script type="text/javascript" src="scripts/base.js"></script>
 		<script type="text/javascript" src="scripts/main.js"></script>
 		
 		<script id="3d-vertex-shader" type="x-shader/x-vertex">
-			attribute vec4 a_position;
+			attribute vec3 a_position;
 			attribute vec4 a_color;
 
-			uniform mat4 u_matrix;
+			uniform mat4 u_projection;
+			uniform mat4 u_modelview;
 
 			varying vec4 v_color;
 
 			void main() {
 				// Multiply the position by the matrix.
-				gl_Position = u_matrix * a_position;
+				//mat4 proj = mat4(1,0,0,0, 0,1,0,0, 0,1,0,0, 0,0,0,1);
+				//gl_Position = a_position * u_modelview * u_projection * vec4(aVertexPosition, 1.0);
+	        	gl_Position = u_projection * u_modelview * vec4(a_position, 1.0);
+
 				// Pass the color to the fragment shader.
 				v_color = a_color;
 			}
