--- a/index.html
+++ b/index.html
@@ -12,32 +12,41 @@
 		<script type="text/javascript" src="scripts/main.js"></script>
 		
 		<script id="3d-vertex-shader" type="x-shader/x-vertex">
-			attribute vec3 a_position;
-			attribute vec4 a_color;
+			precision highp float;
 
-			uniform mat4 u_projection;
-			uniform mat4 u_modelview;
+			attribute vec3 aPosition;
+			attribute vec4 aColor;
+			attribute vec3 aNormal;
 
-			varying vec4 v_color;
+			uniform mat4 uProjectionMatrix;
+			uniform mat4 uModelviewMatrix;
+			uniform mat4 uNormalMatrix;
+
+			varying vec4 vColor;
 
 			void main() {
-				// Multiply the position by the matrix.
-				//mat4 proj = mat4(1,0,0,0, 0,1,0,0, 0,1,0,0, 0,0,0,1);
-				//gl_Position = a_position * u_modelview * u_projection * vec4(aVertexPosition, 1.0);
-	        	gl_Position = u_projection * u_modelview * vec4(a_position, 1.0);
+	        	gl_Position = uProjectionMatrix * uModelviewMatrix * vec4(aPosition, 1.0);
+
+    			vec3 ambientLight = vec3(0.6, 0.6, 0.6);
+    			vec3 directionalLightColor = vec3(0.5, 0.5, 0.75);
+    			vec3 directionalVector = vec3(0.85, 0.8, 0.75);
+     
+    			vec4 transformedNormal = uNormalMatrix * vec4(aNormal, 1.0);
+     
+    			float directional = max(dot(transformedNormal.xyz, directionalVector), 0.0);
+    			vec3 lighting = ambientLight + (directionalLightColor * directional);
 
 				// Pass the color to the fragment shader.
-				v_color = a_color;
+				vColor = vec4(aColor.rgb * lighting, aColor.a);
 			}
 		</script>
 		<script id="3d-fragment-shader" type="x-shader/x-fragment">
-			precision mediump float;
+			precision highp float;
 
-			// Passed in from the vertex shader.
-			varying vec4 v_color;
+			varying vec4 vColor;
 
 			void main() {
-				gl_FragColor = v_color;
+				gl_FragColor = vColor;
 			}
 		</script>
 	</head>
