--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
 			uniform mat4 uModelviewMatrix;
 			uniform mat4 uNormalMatrix;
 
-			varying vec4 vColor;
 			varying vec2 vTextureCoord;
+			varying vec3 vLighting;
 
 			void main() {
 	        	gl_Position = uProjectionMatrix * uModelviewMatrix * vec4(aPosition, 1.0);
@@ -36,10 +36,7 @@
     			vec4 transformedNormal = uNormalMatrix * vec4(aNormal, 1.0);
      
     			float directional = max(dot(transformedNormal.xyz, directionalVector), 0.0);
-    			vec3 lighting = ambientLight + (directionalLightColor * directional);
-
-				// Pass the color to the fragment shader.
-				vColor = vec4(aColor.rgb * lighting, aColor.a);
+    			vLighting = ambientLight + (directionalLightColor * directional);
 
 				vTextureCoord = aTextureCoord;
 			}
@@ -47,14 +44,14 @@
 		<script id="3d-fragment-shader" type="x-shader/x-fragment">
 			precision highp float;
 
-			varying vec4 vColor;
+			varying vec3 vLighting;
 			varying vec2 vTextureCoord;
 
 			uniform sampler2D uSampler;
 
 			void main() {    
 				vec4 texel = texture2D(uSampler, vTextureCoord);
-				gl_FragColor = texel * vColor;
+				gl_FragColor = vec4(texel.rgb * vLighting, texel.a);
 			}
 		</script>
 	</head>
