--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 		<script type="text/javascript" src="scripts/libs/gl-matrix/gl-matrix.js"></script>
 		<script type="text/javascript" src="scripts/webgl.js"></script>
 		<script type="text/javascript" src="scripts/base.js"></script>
+		<script type="text/javascript" src="scripts/renderer.js"></script>
+		<script type="text/javascript" src="scripts/world.js"></script>
+		<script type="text/javascript" src="scripts/input.js"></script>
 		<script type="text/javascript" src="scripts/main.js"></script>
 		
 		<script id="3d-vertex-shader" type="x-shader/x-vertex">
