--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 		<script type="text/javascript" src="scripts/renderer.js"></script>
 		<script type="text/javascript" src="scripts/world.js"></script>
 		<script type="text/javascript" src="scripts/input.js"></script>
+		<script type="text/javascript" src="scripts/chunk.js"></script>
 		<script type="text/javascript" src="scripts/main.js"></script>
 		
 		<script id="3d-vertex-shader" type="x-shader/x-vertex">
