Added FPS counter
Frames per second are averaged over half a second and then displayed in
the canvas.

--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
 	<body>
 		<div id="canvas-wrap">
 			<canvas id ="canvas"></canvas>
+			<div id="status">Loading...</div>
 		</div>
 	</body>
 </html>
