Physics! Collision, Gravity, Jumping

--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
 		<div id="canvas-wrap">
 			<canvas id ="canvas"></canvas>
 			<div id="status">Loading...</div>
+			<div id="hints">Run with arrow keys, jump with A key, look with PageUp/PageDown.</div>
 		</div>
 	</body>
 </html>
