--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 		<script type="text/javascript" src="scripts/chunk.js"></script>
 		<script type="text/javascript" src="scripts/physics.js"></script>
 		<script type="text/javascript" src="scripts/model.js"></script>
+		<script type="text/javascript" src="scripts/mesh.js"></script>
 		<script type="text/javascript" src="scripts/main.js"></script>
 		
 		<script id="3d-vertex-shader" type="x-shader/x-vertex">
