In-dev: models. Normals implemented
OBJ with normals and texturecoords can be parsed. materials still
missing.

--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
 			uniform sampler2D uSampler;
 
 			void main() {    
-				vec4 texel = texture2D(uSampler, vTextureCoord);
-				gl_FragColor = vec4(1,1,1,1);// vec4(texel.rgb * vLighting, texel.a);
+				vec4 texel = vec4(1,1,1,1);// texture2D(uSampler, vTextureCoord);
+				gl_FragColor = vec4(texel.rgb * vLighting, texel.a);
 			}
 		</script>
 	</head>
