--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 		<script type="text/javascript" src="scripts/physics.js"></script>
 		<script type="text/javascript" src="scripts/model.js"></script>
 		<script type="text/javascript" src="scripts/mesh.js"></script>
+		<script type="text/javascript" src="scripts/material.js"></script>
 		<script type="text/javascript" src="scripts/main.js"></script>
 		
 		<script id="3d-vertex-shader" type="x-shader/x-vertex">
@@ -30,12 +31,14 @@
 			uniform mat4 uProjectionMatrix;
 			uniform mat4 uModelviewMatrix;
 			uniform mat4 uNormalMatrix;
+			uniform vec4 uColor;
 
 			varying vec2 vTextureCoord;
 			varying vec3 vLighting;
+			varying vec4 vColor;
 
 			void main() {
-	        	gl_Position = uProjectionMatrix * uModelviewMatrix * vec4(aPosition, 1.0);
+	        gl_Position = uProjectionMatrix * uModelviewMatrix * vec4(aPosition, 1.0);
 
     			vec3 ambientLight = vec3(0.6, 0.6, 0.6);
     			vec3 directionalLightColor = vec3(0.5, 0.5, 0.75);
@@ -46,7 +49,8 @@
     			float directional = max(dot(transformedNormal.xyz, directionalVector), 0.0);
     			vLighting = ambientLight + (directionalLightColor * directional);
 
-				vTextureCoord = aTextureCoord;
+					vTextureCoord = aTextureCoord;
+					vColor = uColor;
 			}
 		</script>
 		<script id="3d-fragment-shader" type="x-shader/x-fragment">
@@ -54,12 +58,13 @@
 
 			varying vec3 vLighting;
 			varying vec2 vTextureCoord;
+			varying vec4 vColor;
 
 			uniform sampler2D uSampler;
 
 			void main() {    
 				vec4 texel = vec4(1,1,1,1);// texture2D(uSampler, vTextureCoord);
-				gl_FragColor = vec4(texel.rgb * vLighting, texel.a);
+				gl_FragColor = vColor * vec4(texel.rgb * vLighting, texel.a);
 			}
 		</script>
 	</head>
