--- a/index.html
+++ b/index.html
@@ -61,9 +61,14 @@
 			varying vec4 vColor;
 
 			uniform sampler2D uSampler;
+			uniform bool uTextureEnabled;
 
-			void main() {    
-				vec4 texel = vec4(1,1,1,1);// texture2D(uSampler, vTextureCoord);
+			void main() {  
+				vec4 texel;
+				if (uTextureEnabled)
+					texel = texture2D(uSampler, vTextureCoord);
+				else
+					texel = vec4(1,1,1,1);
 				gl_FragColor = vColor * vec4(texel.rgb * vLighting, texel.a);
 			}
 		</script>
