--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 		<script type="text/javascript" src="scripts/mesh.js"></script>
 		<script type="text/javascript" src="scripts/material.js"></script>
 		<script type="text/javascript" src="scripts/entity.js"></script>
+		<script type="text/javascript" src="scripts/resources.js"></script>
 		<script type="text/javascript" src="scripts/main.js"></script>
 		
 		<script id="3d-vertex-shader" type="x-shader/x-vertex">
