Improved startup: progress, error handling
Added a large splash screen which either displays the loading progress
or a detailed error message.

--- a/index.html
+++ b/index.html
@@ -78,8 +78,13 @@
 	<body>
 		<div id="canvas-wrap">
 			<canvas id ="canvas"></canvas>
-			<div id="status">Loading...</div>
-			<div id="hints">Run with arrow keys, jump with A key, look with PageUp/PageDown.</div>
+			<div id="splash">
+				<h1>Yogularm 3D</h1>
+				<p id="loading-status">Please wait while the game is loading...</p>
+				<p id="progress">0%</p>
+			</div>
+			<div id="status" style="display: none;">Loading...</div>
+			<div id="hints">Run with arrow keys, jump with A key.</div>
 		</div>
 	</body>
 </html>
