--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
 			void main() {
 	        gl_Position = uProjectionMatrix * uModelviewMatrix * vec4(aPosition, 1.0);
 
-    			vec3 ambientLight = vec3(0.6, 0.6, 0.6);
-    			vec3 directionalLightColor = vec3(0.5, 0.5, 0.75);
+    			vec3 ambientLight = vec3(0.7, 0.7, 0.7);
+    			vec3 directionalLightColor = vec3(0.5, 0.5, 0.75) * 0.3;
     			vec3 directionalVector = vec3(0.85, 0.8, 0.75);
      
     			vec4 transformedNormal = uNormalMatrix * vec4(aNormal, 1.0);
