--- a/index.html
+++ b/index.html
@@ -6,22 +6,6 @@
 		
 		<link rel="stylesheet" type="text/css" href="stylesheets/style.css" />
 		
-		<script type="text/javascript" src="scripts/libs/gl-matrix/gl-matrix.js"></script>
-		<script type="text/javascript" src="scripts/libs/jquery/jquery-1.8.2.js"></script>
-		<script type="text/javascript" src="scripts/webgl.js"></script>
-		<script type="text/javascript" src="scripts/base.js"></script>
-		<script type="text/javascript" src="scripts/renderer.js"></script>
-		<script type="text/javascript" src="scripts/world.js"></script>
-		<script type="text/javascript" src="scripts/input.js"></script>
-		<script type="text/javascript" src="scripts/chunk.js"></script>
-		<script type="text/javascript" src="scripts/physics.js"></script>
-		<script type="text/javascript" src="scripts/model.js"></script>
-		<script type="text/javascript" src="scripts/mesh.js"></script>
-		<script type="text/javascript" src="scripts/material.js"></script>
-		<script type="text/javascript" src="scripts/entity.js"></script>
-		<script type="text/javascript" src="scripts/resources.js"></script>
-		<script type="text/javascript" src="scripts/main.js"></script>
-		
 		<script id="3d-vertex-shader" type="x-shader/x-vertex">
 			precision highp float;
 
@@ -80,11 +64,56 @@
 			<canvas id ="canvas"></canvas>
 			<div id="splash">
 				<h1>Yogularm 3D</h1>
-				<p id="loading-status">Please wait while the game is loading...</p>
-				<p id="progress">0%</p>
+				<p id="loading-status">Please enable JavaScript in your browser.</p>
+				<p id="progress"></p>
 			</div>
 			<div id="status" style="display: none;">Loading...</div>
 			<div id="hints">Run with arrow keys, jump with A key.</div>
 		</div>
+		
+		<script type="text/javascript">
+			document.getElementById('loading-status').innerHTML = 'Please wait while the game is loading...';
+			window.loadingTimeout = setTimeout(function() {
+				if (!window.isError)
+					document.getElementById('loading-status').innerHTML = "That's a little bit too long, probably some error has occurred."
+			}, 10000);
+
+			window.showStatus = function(status) {
+				clearTimeout(window.loadingTimeout);
+				if (!window.isError) {
+					$('#loading-status').html(status);
+				}
+			};
+				
+			window.showError = function(error) {
+				if (!window.isError) {
+					window.isError = true;
+					$('#loading-status').html(error);
+					$('#progress').hide();
+					$('body').addClass('error');
+					window.onerror = null;
+				}
+			};
+			
+			window.onerror = function(message, file, line) {
+				showError('Oops, something went wrong.<br /><br />Details: ' + message + (file ? ' (' + file + ':' + line + ')' : ''));
+			};
+		</script>
+		
+		<script type="text/javascript" src="scripts/libs/jquery/jquery-1.8.2.js"></script>
+		<script type="text/javascript" src="scripts/libs/gl-matrix/gl-matrix.js"></script>
+		<script type="text/javascript" src="scripts/webgl.js"></script>
+		<script type="text/javascript" src="scripts/main.js"></script>
+		<script type="text/javascript" src="scripts/base.js"></script>
+		<script type="text/javascript" src="scripts/renderer.js"></script>
+		<script type="text/javascript" src="scripts/world.js"></script>
+		<script type="text/javascript" src="scripts/input.js"></script>
+		<script type="text/javascript" src="scripts/chunk.js"></script>
+		<script type="text/javascript" src="scripts/physics.js"></script>
+		<script type="text/javascript" src="scripts/model.js"></script>
+		<script type="text/javascript" src="scripts/mesh.js"></script>
+		<script type="text/javascript" src="scripts/material.js"></script>
+		<script type="text/javascript" src="scripts/entity.js"></script>
+		<script type="text/javascript" src="scripts/resources.js"></script>
 	</body>
 </html>
