Extracted game logic into Game class; added some tests

--- a/index.html
+++ b/index.html
@@ -115,5 +115,6 @@
 		<script type="text/javascript" src="scripts/material.js"></script>
 		<script type="text/javascript" src="scripts/entity.js"></script>
 		<script type="text/javascript" src="scripts/resources.js"></script>
+		<script type="text/javascript" src="scripts/game.js"></script>
 	</body>
 </html>
