--- a/spec.html
+++ b/spec.html
@@ -10,11 +10,11 @@
 
   <!-- include spec files here... -->
   <script type="text/javascript" src="spec/physics.js"></script>
+  <script type="text/javascript" src="spec/world.js"></script>
 
   <!-- include source files here... -->
 	<script type="text/javascript" src="scripts/libs/jquery/jquery-1.8.2.js"></script>
 	<script type="text/javascript" src="scripts/libs/gl-matrix/gl-matrix.js"></script>
-	<script type="text/javascript" src="scripts/webgl.js"></script>
 	<script type="text/javascript" src="scripts/base.js"></script>
 	<script type="text/javascript" src="scripts/renderer.js"></script>
 	<script type="text/javascript" src="scripts/world.js"></script>
