Bugfix: Firefox failed to load model files
Now set the dataType parameter

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 				<p id="progress"></p>
 			</div>
 			<div id="status" style="display: none;">Loading...</div>
-			<div id="hints">Run with arrow keys, jump with A key.</div>
+			<div id="hints">Arrow keys: run &middot; A: jump &middot; Ctrl: Reset camera</div>
 		</div>
 		
 		<script type="text/javascript">
