--- a/index.html
+++ b/index.html
@@ -112,7 +112,8 @@
 		<script type="text/javascript" src="scripts/model.js"></script>
 		<script type="text/javascript" src="scripts/mesh.js"></script>
 		<script type="text/javascript" src="scripts/material.js"></script>
-		<script type="text/javascript" src="scripts/entity.js"></script>
+		<script type="text/javascript" src="scripts/entity.js"></script>t>
+		<script type="text/javascript" src="scripts/blocks.js"></script>
 		<script type="text/javascript" src="scripts/resources.js"></script>
 		<script type="text/javascript" src="scripts/game.js"></script>
 	</body>
