Guided building! Implemented building path and builders
Currently, the path builder generates a long array of blocks

--- a/index.html
+++ b/index.html
@@ -115,6 +115,11 @@
 		<script type="text/javascript" src="scripts/entity.js"></script>
 		<script type="text/javascript" src="scripts/blocks.js"></script>
 		<script type="text/javascript" src="scripts/resources.js"></script>
+		<script type="text/javascript" src="scripts/building/building-path.js"></script>
+		<script type="text/javascript" src="scripts/building/straight-move-strategy.js"></script>
+		<script type="text/javascript" src="scripts/building/guided-builder.js"></script>
+		<script type="text/javascript" src="scripts/building/test-builder.js"></script>
+		<script type="text/javascript" src="scripts/building/test-path-builder.js"></script>
 		<script type="text/javascript" src="scripts/game.js"></script>
 	</body>
 </html>
