--- a/spec.html
+++ b/spec.html
@@ -15,17 +15,24 @@
   <!-- include source files here... -->
 	<script type="text/javascript" src="scripts/libs/jquery/jquery-1.8.2.js"></script>
 	<script type="text/javascript" src="scripts/libs/gl-matrix/gl-matrix.js"></script>
-	<script type="text/javascript" src="scripts/base.js"></script>
-	<script type="text/javascript" src="scripts/renderer.js"></script>
-	<script type="text/javascript" src="scripts/world.js"></script>
-	<script type="text/javascript" src="scripts/input.js"></script>
-	<script type="text/javascript" src="scripts/chunk.js"></script>
-	<script type="text/javascript" src="scripts/physics.js"></script>
-	<script type="text/javascript" src="scripts/model.js"></script>
-	<script type="text/javascript" src="scripts/mesh.js"></script>
-	<script type="text/javascript" src="scripts/material.js"></script>
-	<script type="text/javascript" src="scripts/entity.js"></script>
-	<script type="text/javascript" src="scripts/resources.js"></script>
+		<script type="text/javascript" src="scripts/base.js"></script>
+		<script type="text/javascript" src="scripts/renderer.js"></script>
+		<script type="text/javascript" src="scripts/world.js"></script>
+		<script type="text/javascript" src="scripts/input.js"></script>
+		<script type="text/javascript" src="scripts/chunk.js"></script>
+		<script type="text/javascript" src="scripts/physics.js"></script>
+		<script type="text/javascript" src="scripts/model.js"></script>
+		<script type="text/javascript" src="scripts/mesh.js"></script>
+		<script type="text/javascript" src="scripts/material.js"></script>
+		<script type="text/javascript" src="scripts/entity.js"></script>
+		<script type="text/javascript" src="scripts/blocks.js"></script>
+		<script type="text/javascript" src="scripts/resources.js"></script>
+		<script type="text/javascript" src="scripts/building/building-path.js"></script>
+		<script type="text/javascript" src="scripts/building/straight-move-strategy.js"></script>
+		<script type="text/javascript" src="scripts/building/guided-builder.js"></script>
+		<script type="text/javascript" src="scripts/building/test-builder.js"></script>
+		<script type="text/javascript" src="scripts/building/test-path-builder.js"></script>
+		<script type="text/javascript" src="scripts/game.js"></script>
 
   <script type="text/javascript">
     (function() {
