--- a/spec.html
+++ b/spec.html
@@ -11,6 +11,7 @@
   <!-- include spec files here... -->
   <script type="text/javascript" src="spec/physics.js"></script>
   <script type="text/javascript" src="spec/world.js"></script>
+  <script type="text/javascript" src="spec/building-path.js"></script>
 
   <!-- include source files here... -->
 	<script type="text/javascript" src="scripts/libs/jquery/jquery-1.8.2.js"></script>
