--- a/index.html
+++ b/index.html
@@ -117,6 +117,7 @@
 		<script type="text/javascript" src="scripts/resources.js"></script>
 		<script type="text/javascript" src="scripts/building/building-path.js"></script>
 		<script type="text/javascript" src="scripts/building/straight-move-strategy.js"></script>
+		<script type="text/javascript" src="scripts/building/fall-strategy.js"></script>
 		<script type="text/javascript" src="scripts/building/guided-builder.js"></script>
 		<script type="text/javascript" src="scripts/building/test-builder.js"></script>
 		<script type="text/javascript" src="scripts/building/test-path-builder.js"></script>
