--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
 			</div>
 			<div id="status" style="display: none;">Loading...</div>
 			<div id="hints">Arrow keys: run &middot; A: jump &middot; Ctrl: Reset camera</div>
+			<input type="text"id="keyboard-input-dummy" />
 		</div>
 		
 		<script type="text/javascript">
