Finished fall strategy (calculating trace

--- a/index.html
+++ b/index.html
@@ -128,6 +128,7 @@
 		<script type="text/javascript" src="scripts/building/fall-strategy.js"></script>
 		<script type="text/javascript" src="scripts/building/guided-builder.js"></script>
 		<script type="text/javascript" src="scripts/building/test-builder.js"></script>
+		<script type="text/javascript" src="scripts/building/random-path-builder.js"></script>
 		<script type="text/javascript" src="scripts/building/test-path-builder.js"></script>
 		<script type="text/javascript" src="scripts/game.js"></script>
 	</body>
